# basic-systems-programming

./: CMakeLists.txt  README.md
files/: a.out  file_size  files_coping  files_coping_revert  files_coping_revert.c  files_revert  files_size  fun.c  plik.txt  plik1.txt
processes/: a.out  fun.c  semaphors_and_processes.c
readers-and-writers-problem/: books.c  readers-and-writers.c
roller-coaster/: roller-coaster.c
